add flyway.conf, restore operator report